# Shakthis-personal-Assistant

./: .gitignore  README.md  vercel.json
Backend/: pyproject.toml  requirements.txt
Backend/app/: main.py
Backend/app/api/: chat.py
Backend/app/core/: config.py  llm.py
Backend/app/data/: merged.md
Backend/app/rag/: ingest.py  prompts.py  retriever.py  test.py
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ArchitectureModal.jsx  ChatMessage.jsx  Header.jsx  SuggestedQuestions.jsx  TechStackBar.jsx  TypingIndicator.jsx  icons.jsx
frontend/src/utils/: formatMessage.js
